# ini_reader

./: .gitignore  CMakeLists.txt  README.md
config/: test1.ini  test1.ini.bak
include/: ini_reader.h
src/: ini_reader.cpp
test/: main.cpp
